# PQC-Aigis

./: .gitignore  CMakeLists.txt  README.md  aigis_comp.h  aigis_const.h  aigis_enc.h  aigis_pack.h  aigis_poly.h  aigis_sig.h  check.h  comp.h  debug.h  kdf_aux.h  makefile  ntt.h  poly.h  reduce.h
.github/workflows/: ci.yaml
crypto/aigis/include/: debug.h
entropy/: baby_png.h
hash/: kdf_aux.h
hash/keccak/: fips202.h
hash/sm3/: kdf.h  sm3.h
include/: aigis_comp.h  aigis_const.h  aigis_enc.h  aigis_pack.h  aigis_poly.h  aigis_sig.h  ntt.h  reduce.h
include/entropy/: baby_png.h
include/hash/: kdf_aux.h
include/hash/keccak/: fips202.h
include/hash/sm3/: kdf.h  sm3.h
include/samplers/: cbd.h  rej_samp.h
reverse_engineer/: REver2.ipynb  REverse.ipynb  direct_construct_zeta.ipynb
samplers/: cbd.h  rej_samp.h  sig_pack.h
src/: aigis_comp.c  aigis_enc.c  aigis_pack.c  aigis_poly.c  aigis_sig.c  debug.c  ntt.c  reduce.c
src/entropy/: baby_png.c
src/hash/: kdf_aux.c
src/hash/keccak/: fips202.c
src/hash/sm3/: kdf.c  sm3.c
src/samplers/: cbd.c  rej_samp.c
test/: makefile  test_comp.c  test_enc.c  test_mat.c  test_ntt.c  test_rej.c
test/enc/: makefile  test_comp.c  test_enc.c  test_enc_mat.c  test_enc_ntt.c  test_enc_rej.c  test_mat.c  test_ntt.c  test_rej.c
test/native_ntt/: makefile  ntt.c
test/sig/: makefile  test_key.c  test_mat.c  test_ntt.c  test_rej.c  test_rej2.c  test_sig.c
